--- a/templates/back_end/visa_classic/demandes/rappel_dossier.html.twig
+++ b/templates/back_end/visa_classic/demandes/rappel_dossier.html.twig
@@ -9,7 +9,7 @@
 <div class="row">
     <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Demandes</h5>
 </div>
-    <div class="alert alert-success" id="success-alert" style="display:none"> Mail envoyer</div>
+    <div class="alert alert-success" id="success-alert-rappel" style="display:none"> Mail envoyer</div>
     <div class="row">
         <div class="col-12">
             <table class="table table-bordered table-hover">
@@ -45,7 +45,7 @@
             </table>
         </div> 
     </div>
-    <button type="submit" id="send" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+    <button type="submit" id="send" class="btn btn-enregistrer"><i class="fas fa-save"></i> Envoyer </a>
 
 <script>
     $(function() {
@@ -57,8 +57,8 @@
 
             $.post( Routing.generate('rappel_dossier_non_recu'), { choices : data }, function(){
                 event.preventDefault()
-                $("#success-alert").show();
-                setTimeout(function() { $("#success-alert").hide(); }, 5000);
+                $("#success-alert-rappel").show();
+                setTimeout(function() { $("#success-alert-rappel").hide(); }, 5000);
             } );
             
         })
