--- a/templates/front_end/paiement/monetico.html.twig
+++ b/templates/front_end/paiement/monetico.html.twig
@@ -13,7 +13,7 @@
                     {{ form_errors(form) }}
                     <div class="payment-method">
                         <div class="form-row align-items-center">
-                            <div class="form-group col-6 col-md-4">{{ form_widget(form.payment.payment_method[0]) }}</div>
+                            <div class="form-group col-6 col-md-4">{{ form_widget(form) }}</div>
                             <div class="form-group col-6 col-md-8"><img src="{{ asset('img/cb_visa_mastercard_logo.png') }}" height="28"></div>
                         </div>	
                     </div>
