--- a/templates/front_end/paiement/monetico.html.twig
+++ b/templates/front_end/paiement/monetico.html.twig
@@ -22,12 +22,8 @@
 					<input type="hidden" name="societe"             id="societe"           value="{{form.societe}}" />
 					<input type="hidden" name="texte-libre"         id="texte-libre"       value="{{form.textelibre}}" />
 					<input type="hidden" name="mail"                id="mail"              value="{{form.mail}}" />
-					<!-------------------------------------------------------------------------------------------------------------------------------------------------------------
-					SECTION PAIEMENT FRACTIONNE - Section spécifique au paiement fractionné
 
-					INSTALLMENT PAYMENT SECTION - Section specific to the installment payment
-					-------------------------------------------------------------------------------------------------------------------------------------------------------------->
-					<input type="hidden" name="nbrech"              id="nbrech"         value="<?php echo $sNbrEch;?>" />
+					{# <input type="hidden" name="nbrech"              id="nbrech"         value="<?php echo $sNbrEch;?>" />
 					<input type="hidden" name="dateech1"            id="dateech1"       value="<?php echo $sDateEcheance1;?>" />
 					<input type="hidden" name="montantech1"         id="montantech1"    value="<?php echo $sMontantEcheance1;?>" />
 					<input type="hidden" name="dateech2"            id="dateech2"       value="<?php echo $sDateEcheance2;?>" />
@@ -35,12 +31,7 @@
 					<input type="hidden" name="dateech3"            id="dateech3"       value="<?php echo $sDateEcheance3;?>" />
 					<input type="hidden" name="montantech3"         id="montantech3"    value="<?php echo $sMontantEcheance3;?>" />
 					<input type="hidden" name="dateech4"            id="dateech4"       value="<?php echo $sDateEcheance4;?>" />
-					<input type="hidden" name="montantech4"         id="montantech4"    value="<?php echo $sMontantEcheance4;?>" />
-					<!-------------------------------------------------------------------------------------------------------------------------------------------------------------
-					FIN SECTION PAIEMENT FRACTIONNE
-
-					END INSTALLMENT PAYMENT SECTION
-					-------------------------------------------------------------------------------------------------------------------------------------------------------------->
+					<input type="hidden" name="montantech4"         id="montantech4"    value="<?php echo $sMontantEcheance4;?>" /> #}
 					<input type="submit" name="bouton"              id="bouton"         value="Connexion / Connection" />
 				</p>
 				</form>
