--- a/templates/front_end/visa_classic/visa_classic_show.html.twig
+++ b/templates/front_end/visa_classic/visa_classic_show.html.twig
@@ -11,8 +11,8 @@
 						
 
 <div class="container-fluid">
-    <div class="breadcrumb-page">
-        <div><a href="index.html">Accueil</a> / <a href="index.html">Pays visa</a> / <a href="page-visa-classique.html">Asie</a> / <a href="page-visa-classique.html"><span class="last">{{visa.pays.titre}}</span></a></div>
+    {# <div class="breadcrumb-page">
+        <div><a href="index.html">Accueil</a> / <a href="index.html">Pays visa</a> / <a href="page-visa-classique.html">Asie</a> / <a href="page-visa-classique.html"><span class="last">{{visa.pays.titre}}</span></a></div> #}
 
         <div class="on-mobile share-btn">
             <a href="#"><img src="/images/share.svg" alt="icône de partage" class="icon">Partager</a>
@@ -143,7 +143,7 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="radio-price">95€ <small>TTC</small></div>
+                                            <div class="radio-price">{{type.fraisConsulaire + type.fraisEdition + type.fraisFormulaire }} <small>TTC</small></div>
                                         </div>
                                     </div>
                                     <div class="text-center on-tablet-desktop">
@@ -372,7 +372,7 @@
                                     <div class="on-tablet-desktop">
                                             <h3>{{ info.titre }}</h3>
                                     </div>
-                                    {{ info.contenu}}
+                                    {{ info.contenu|raw}}
                                 </div>
                             </div>
                         {% endfor %}
@@ -391,7 +391,7 @@
                                     </a>
                                 </li>
                                 <div class="{{ info.titre }} collapse {% if loop.first %} show {% endif %}">
-                                    {{ info.contenu }}
+                                    {{ info.contenu|raw }}
                                 </div>
                             {% endfor %}
                             
@@ -654,7 +654,14 @@
 
             <div class="tab-pane fade" id="nav-mode-expedition" role="tabpanel" aria-labelledby="nav-mode-expedition-tab">
                 <div class="row">
-                    <div class="col-12 col-md-6">
+                    {% if voletModeExpedition %}
+                        {{voletModeExpedition.contenu|raw}}
+                    {% endif %}
+                
+                
+                <!--Mode d'expedition-->
+
+                    {# <div class="col-12 col-md-6">
                         <h4 class="title-yellow">Expédition par courrier :</h4>
                         <p>Nous assurons les expéditions en fonctions de vos spécifications lors de votre commande : </p>
                         <ul>
@@ -683,13 +690,17 @@
                         <ul>
                             <li>Vous pouvez demander une remise en main propre à l’agence. Cette remise à l’agence est gratuite.</li>
                         </ul>
-                    </div>
+                    </div> #}
                 </div>
 
             </div>
 
             <div class="tab-pane fade" id="nav-service-detail" role="tabpanel" aria-labelledby="nav-service-detail-tab">
                 <div class="tab-wrapper">
+                <!--Notre service-->
+                {% if notreService %}
+                    {{notreService.contenu|raw}}
+                {% endif %}
                 </div>
             </div>
 
